# HachimiAImad

./: .env  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py  schemas.py  validators.py
app/core/: config.py  logging.py  pipeline_stub.py  storage.py  task.py
app/workers/: celery_app.py
docs/: 哈基米音MAD项目 - 开放平台技术架构.txt
docs/technical_log/: part 2 of 15 by dewberry.md
tests/: test_e2e.py  test_healthz.py  test_validations.py
