[tool.poetry]
name = "hachimi-mad"
version = "0.1.0"
description = "Hachimi MAD Open Platform - Part 1 async MVP"
authors = ["Your Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version="^0.30.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.4.0"
python-multipart = "^0.0.20"
redis = "^5.0.7"
celery = "^5.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.0"
ruff = "^0.6.0"

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning"
]
